--- a/reviewers.config
+++ b/reviewers.config
@@ -1,2 +1,5 @@
-[filter "*"]
+[filter "branch:master"]
+  reviewer = ops-arpmgrd-maintainers
+
+[filter "branch:release"]
   reviewer = ops-arpmgrd-maintainers
