--- a/project.config
+++ b/project.config
@@ -7,3 +7,8 @@ label-Workflow = -1..+1 group infra-core
 [submit]
 mergeContent = true
 action = rebase if necessary
+[access "refs/tags/*"]
+create = group ops-arpmgrd-maintainers
+push = +force group ops-arpmgrd-maintainers
+pushTag = +force group ops-arpmgrd-maintainers
+pushSignedTag = group ops-arpmgrd-maintainers
